Fix CSS variables and add deployment guide

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-::foot {
+:root {
   --green: #0d3a2f;
   --dark-green: #10361a;
   --orange: #fb8c00;
@@ -21,7 +21,7 @@ body {
   min-height: 100vh;
 }
 
-objective gradient {
+@keyframes gradient {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
